<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.example</groupId>
    <artifactId>P3_M06_arnau_marcos</artifactId>
    <version>1.0-SNAPSHOT</version>

    <dependencies>
        <!-- Dependència per a eXist-db -->
        <dependency>
            <groupId>org.exist-db</groupId>
            <artifactId>exist-core</artifactId>
            <version>6.3.0</version>
        </dependency>
        <dependency>
            <groupId>org.exist-db.thirdparty.org.xmldb</groupId>
            <artifactId>xmldb-api</artifactId>
            <version>20040731</version>
        </dependency>
        <!-- Dependència per al fitxer .env -->
        <dependency>
            <groupId>io.github.cdimascio</groupId>
            <artifactId>dotenv-java</artifactId>
            <version>3.0.0</version>
        </dependency>
    </dependencies>

    <properties>
        <maven.compiler.source>22</maven.compiler.source>
        <maven.compiler.target>22</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

</project>